--- a/frontend/src/components/Body/RoutesPage/Map.css
+++ b/frontend/src/components/Body/RoutesPage/Map.css
@@ -19,3 +19,20 @@
     line-height: 2em;
     z-index: 1;
 }
+
+.marker__button {
+  border: none; 
+  background: none;
+  height: 100%; 
+  width: 100%; 
+  outline: none; 
+}
+
+.marker__button:hover {
+  background:rgba(255, 255, 255, 0.2)
+}
+
+.popup {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
+}
