--- a/frontend/src/components/Body/RoutesPage/Map.css
+++ b/frontend/src/components/Body/RoutesPage/Map.css
@@ -70,6 +70,13 @@
   font-size: small;
 }
 
+.popup_button {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
+  border: none; 
+  background-color: none;
+}
+
 .panel__search {
   width: 120px;
   margin-top: 10px; 
