--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,11 @@
+@import url(//db.onlinewebfonts.com/c/bb086e91f19974889fbf7cbed115a360?family=GalaW01-CondensedMedium);
 body {
-  border: 0px 0px
+  border: 0px 0px;
+  background-color: #EBF8FF;
 }
 
-.outer-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+h5.header-font, h1.header-font {
+  font-family: "GalaW01-CondensedMedium";
+  font-size: 48px;
+  color: #3f51b5
 }
