further stylized fonts for log in and sign up

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,8 +10,23 @@ h5.header-font, h1.header-font {
   color: #3f51b5
 }
 
-.dashboard-username.font {
+.dashboard-font {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.dashboard-font.username {
+  font-size: 35px;
   color: #63B3ED;
-  text-shadow: 0px 0px 2px #3f51b5;
-  font-size: 40px;
+  text-shadow: -1px 1px 2px #3f51b5,
+  1px 1px 2px #3f51b5,
+  1px -1px 0px #3f51b5,
+  -1px -1px 0px #3f51b5
+}
+
+.dashboard-font h5  {
+  color: #3f51b5;
+  font-weight: 550;
 }
