--- a/frontend/src/components/Body/RoutesPage/CreateMap.css
+++ b/frontend/src/components/Body/RoutesPage/CreateMap.css
@@ -1,25 +1,38 @@
-.map_container {
+.mapcreate_container {
   position: relative; 
 }
 
-.panel {
-    position: absolute;
+.mapcreate_panel {
+    position: absolute; 
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    height: 280px;
     margin: 20px;
-    width: 15%;
-    top: 0;
+    min-width: 80px;
+    max-width: 150px;
     padding: 10px;
     background-color: rgba(255, 255, 255, 0.9);
     font-family: sans-serif;
     font-size: 0.8em;
     line-height: 2em;
-    z-index: 1;
     border: solid black; 
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.panel__route {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: large;
+  margin: 0; 
 }
 
 .panel__distance {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: large;
+  margin: 0; 
 }
 
 .panel__reset {
@@ -40,7 +53,7 @@
 
 .panel__submit {
   width: 120px;
-  margin: 0px 10px; 
+  margin: 0; 
   border-radius: 3px; 
   border: none; 
   background-color: rgb(126, 209, 247);;
