--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,7 @@
 @import url(//db.onlinewebfonts.com/c/bb086e91f19974889fbf7cbed115a360?family=GalaW01-CondensedMedium);
 body.body {
-  border: 0px 0px;
   background-color: #EBF8FF;
-  margin-bottom: 0%;
+  width: fit-content;
 }
 
 h5.header-font, h1.header-font {
