--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,10 @@
 @import url(//db.onlinewebfonts.com/c/bb086e91f19974889fbf7cbed115a360?family=GalaW01-CondensedMedium);
 body.body {
   background-color: #EBF8FF;
-  width: fit-content;
+  display: flex;
+  justify-content:center;
+
+  width: 100vw;
 }
 
 h5.header-font, h1.header-font {
